#SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/tomahawk.app/Contents/Plugins/" )

SET( CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/${PROJECT_PLUGIN_DIR}" )

IF( LIBJREEN_FOUND )
    ADD_SUBDIRECTORY( jabber )
ENDIF( LIBJREEN_FOUND )

IF( QTWEETLIB_FOUND )
    #ADD_SUBDIRECTORY( twitter )
ENDIF( QTWEETLIB_FOUND )

ADD_SUBDIRECTORY( zeroconf )
